added main page java, attempted to link with mainActivity but seems to not be able to recognize it.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
 
-    android:background="#0F9D58"
+    android:background="#64a7c8"
     android:padding="16dp"
     tools:context="com.example.stopwatch.MainActivity">
     <!-- Add some background color -->
