reorganized directory to be in working order.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,52 +27,21 @@
         android:textAppearance="@android:style/TextAppearance.Large"
         android:textSize = "56sp"/>
 
+
     <Button
-        android:id = "@+id/start_button"
+        android:id="@+id/new_task"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp"
+        android:text="@string/new_task" />
+
+    <Button
+        android:id = "@+id/timer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity = "center_horizontal"
         android:layout_marginTop = "20dp"
+        android:text = "@string/timer"/>
 
-        android:onClick = "onClickStart"
-        android:text = "@string/start" />
-
-
-    <!-- This code is for the Stop button. -->
-    <Button
-
-
-    android:id="@+id/stop_button"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center_horizontal"
-    android:layout_marginTop="8dp"
-
-
-    android:onClick="onClickStop"
-    android:text= "@string/stop" />
-
-    <!-- When it gets clicked, the Stop button -->
-    <!-- calls the onClickStop() method. -->
-
-    <!-- This code is for Reset button. -->
-
-    <Button
-
-
-    android:id="@+id/reset_button"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center_horizontal"
-    android:layout_marginTop="8dp"
-
-
-    android:onClick="onClickReset"
-    android:text="@string/reset" />
-
-
-    <!-- When it gets clicked, the Reset button -->
-    <!-- calls the onClickReset() method. -->
 </LinearLayout>
-
-
